# insighty

./: Datathon 2025 Project - Insighty.docx  Insighty.pptx  InsightyDocument.docx  README.md  insighty.pptx
figures/accident_data/: data.csv  insight.txt  summary.txt
figures/electronic/transactions/: data.csv  insight.txt  summary.txt  url.txt
figures/environment_energy/climate/: data.csv  insight.txt  summary.txt  url.txt
figures/environment_energy/consumption_vs_production/: insight.txt  summary.txt  url.txt  water_consumption.csv  water_production.csv
figures/environment_energy/sewage/: data.csv  insight.txt  summary.txt  url.txt
figures/finance/cb_deposits/: data.csv  insight.txt  summary.txt  url.txt
figures/finance/money_supply/: data.csv  insight.txt  summary.txt  url.txt
figures/population/live_births_nationality/: data.csv  insight.txt  summary.txt  url.txt
figures/population/marriages_vs_nationality/: insight.txt  marriages.csv  nationality.csv  summary.txt  url.txt
figures/population/population_age_group/: data.csv  insight.txt  summary.txt  url.txt
figures/price_index/consumer_price_index/: data.csv  insight.txt  (+2 more)
insighty/: .env.dev  .gitignore  README.md  compose.dev.yml  compose.yml  taskfile.yml
insighty/backend/: Dockerfile  main.py  pyproject.toml
insighty/backend/api/: api.py
insighty/backend/db/: conn.py  models.py  repo.py
insighty/backend/seed/: load.py
insighty/backend/settings/: conf.py
insighty/frontend/: Dockerfile  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+47 files in other folders)
